--- a/index.html
+++ b/index.html
@@ -253,7 +253,7 @@
                     </div>
                     <button type="submit" class="btn btn-primary" style="width: 100%;">Login</button>
                     <p style="margin-top: 15px; font-size: 0.8rem; color: var(--text-light);">
-                        Default: admin/admin or sarah.j/pass
+                        Default: admin/admin or rajesh.kumar/pass
                     </p>
                 </form>
             </div>
